force-app/main/default/objects/Weather__c/Weather__c.object-meta.xml
<CustomObject>
    <label>Weather</label>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>Weather Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weathers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>