force-app/main/default/objects/Weather__c/fields/Base__c.field-meta.xml
<CustomField>
    <fullName>Base__c</fullName>
    <label>Base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>