force-app/main/default/objects/Weather__c/fields/Clouds_All__c.field-meta.xml
<CustomField>
    <fullName>Clouds_All__c</fullName>
    <label>Clouds All</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>