force-app/main/default/objects/Weather__c/fields/Cod__c.field-meta.xml
<CustomField>
    <fullName>Cod__c</fullName>
    <label>Cod</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>