force-app/main/default/objects/Weather__c/fields/Sunrize__c.field-meta.xml
<CustomField>
    <fullName>Sunrize__c</fullName>
    <label>Sunrize</label>
    <type>DateTime</type>
</CustomField>