force-app/main/default/objects/Weather__c/fields/Sunset__c.field-meta.xml
<CustomField>
    <fullName>Sunset__c</fullName>
    <label>Sunset</label>
    <type>DateTime</type>
</CustomField>