force-app/main/default/objects/Weather__c/fields/Sys_Country__c.field-meta.xml
<CustomField>
    <fullName>Sys_Country__c</fullName>
    <label>Sys Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>