force-app/main/default/objects/Weather__c/fields/Sys_Id__c.field-meta.xml
<CustomField>
    <fullName>Sys_Id__c</fullName>
    <label>Sys Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>