force-app/main/default/objects/Weather__c/fields/Sys_Type__c.field-meta.xml
<CustomField>
    <fullName>Sys_Type__c</fullName>
    <label>Sys Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>