force-app/main/default/objects/Weather__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <label>Temperature</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>