force-app/main/default/objects/Weather__c/fields/Weather_Icon__c.field-meta.xml
<CustomField>
    <fullName>Weather_Icon__c</fullName>
    <label>Weather Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>