force-app/main/default/objects/Weather__c/fields/Weather_Id__c.field-meta.xml
<CustomField>
    <fullName>Weather_Id__c</fullName>
    <label>Weather Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>