force-app/main/default/objects/Weather__c/fields/Weather_Main__c.field-meta.xml
<CustomField>
    <fullName>Weather_Main__c</fullName>
    <label>Weather Main</label>
    <length>255</length>
    <type>Text</type>
</CustomField>