force-app/main/default/objects/Weather__c/fields/Wind_Deg__c.field-meta.xml
<CustomField>
    <fullName>Wind_Deg__c</fullName>
    <label>Wind Deg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>