force-app/main/default/objects/Weather__c/fields/Wind_Speed__c.field-meta.xml
<CustomField>
    <fullName>Wind_Speed__c</fullName>
    <label>Wind Speed</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>